<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cl_colored_background"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_rectangle_gray"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="5dp"
    >
    <ImageView
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:tint="@color/super_light_opacity"
        android:tintMode="multiply"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_pokemon_entry_name"
        android:text="@string/details_fragment_placeholder_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:maxWidth="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_pokemon_entry_type"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/tv_pokemon_entry_type"
        android:text="@string/details_fragment_placeholder_type"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv_pokemon_entry_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokemon_entry_name"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/rounded_rectangle_gray"
        android:backgroundTint="@color/dark_opacity"
        />
    <ImageView
        android:id="@+id/tv_pokemon_entry_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        />
    <TextView
        android:id="@+id/tv_pokemon_entry_number"
        android:text="@string/details_fragment_placeholder_id"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>