<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.search.SearchFragment">


    <!-- Top part of the Screen -->

    <ImageView
        android:id="@+id/iv_white_card_search"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/rounded_rectangle_white_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:translationY="-25dp"
        android:translationX="45dp"
        app:tint="@color/light_opacity"
        android:tintMode="add"
        />
    <TextView
        android:id="@+id/tv_title_search_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_fragment_title"
        android:textSize="40sp"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_search_field_search"
        />
    <EditText
        android:id="@+id/et_search_field_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_fragment_search_hint"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:background="@drawable/rounded_rectangle_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_search_search"
        app:layout_constraintBottom_toBottomOf="@id/iv_white_card_search"
        />

    <!-- No results -->

    <ImageView
        android:id="@+id/iv_pokeball_search"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_white_card_search"
        app:layout_constraintBottom_toTopOf="@id/tv_no_results_search"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.2"
        />
    <TextView
        android:id="@+id/tv_no_results_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pokeball_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />


    <!-- History -->

    <TextView
        android:visibility="visible"
        android:id="@+id/tv_search_history"
        android:text="@string/search_fragment_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_white_card_search"
        app:layout_constraintBottom_toTopOf="@+id/rv_search_history"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/rv_search_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_history" />

</androidx.constraintlayout.widget.ConstraintLayout>